WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158689
[GTK] Web view is not redrawn when reparented in force compositing mode
https://bugs.webkit.org/show_bug.cgi?id=158689
Summary
[GTK] Web view is not redrawn when reparented in force compositing mode
Carlos Garcia Campos
Reported
2016-06-13 04:55:03 PDT
This is easy to reproduce undocking the inspector: 1- Run MiniBrowser with WEBKIT_FORCE_COMPOSITING_MODE=1 2- Open the inspector 3- Click on undock button The new window is created and the view is moved there but nothing is rendered. you need to force a redraw, by resizing the window, for example, to see the contents. This also happen when using the threaded compositor, since compositing mode is always enabled too.
Attachments
Patch
(9.69 KB, patch)
2016-06-13 05:06 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Updated patch
(9.69 KB, patch)
2016-06-14 22:56 PDT
,
Carlos Garcia Campos
zan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-06-13 05:06:12 PDT
Created
attachment 281167
[details]
Patch
WebKit Commit Bot
Comment 2
2016-06-13 05:08:00 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Michael Catanzaro
Comment 3
2016-06-13 08:47:52 PDT
Does this fix the similar bug that occurs when resizing the window?
Carlos Garcia Campos
Comment 4
2016-06-13 23:48:41 PDT
(In reply to
comment #3
)
> Does this fix the similar bug that occurs when resizing the window?
I don't know I haven't noticed that. Do you mean when resizing the window with the threaded compositor or without it but compositing mode forced?
Michael Catanzaro
Comment 5
2016-06-14 08:05:26 PDT
(In reply to
comment #4
)
> (In reply to
comment #3
) > > Does this fix the similar bug that occurs when resizing the window? > > I don't know I haven't noticed that. Do you mean when resizing the window > with the threaded compositor or without it but compositing mode forced?
With compositing mode, without threaded compositor... but actually, I can't reproduce it anymore. Let's forget about it for now; maybe it got fixed at some point.
Michael Catanzaro
Comment 6
2016-06-14 08:06:36 PDT
Comment on
attachment 281167
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=281167&action=review
(I think Zan would be a better reviewer for this.)
> Source/WebKit2/ChangeLog:9 > + mode when the view is unrealized, because the native surface handle por compositing is destroyed, but it doesn't
for ;)
> Source/WebKit2/ChangeLog:12 > + not. The Web process never exits accelerated mode when compositing mode is forzed, but the UI process doesn't
forced
Carlos Garcia Campos
Comment 7
2016-06-14 22:56:27 PDT
Created
attachment 281337
[details]
Updated patch Previous patch broke the build with redirected X window disabled because of a wrong ifdef.
Zan Dobersek
Comment 8
2016-06-21 03:39:02 PDT
Comment on
attachment 281337
[details]
Updated patch LGTM.
Carlos Garcia Campos
Comment 9
2016-06-21 04:05:15 PDT
Committed
r202273
: <
http://trac.webkit.org/changeset/202273
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug